// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReceiveFunds should not render if not open 1`] = `<DocumentFragment />`;

exports[`ReceiveFunds should render with a wallet name 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="sc-AxhUy fXfatb fixed top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 pb-8 mx-auto mt-24 overflow-hidden rounded-xl bg-theme-background"
    data-testid="modal__inner"
  >
    <div
      class="absolute top-0 right-0 z-50 mt-5 mr-5"
    >
      <button
        class="sc-AxhCb idLVlI"
        color="neutral"
        data-testid="modal__close-btn"
        type="button"
      >
        <div
          class="p-1"
        >
          <div
            class="sc-AxiKw bopxJn"
            height="12"
            width="12"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2
        class="mb-0 text-3xl font-bold"
      >
        Receive Funds
      </h2>
      <div
        class="flex-1"
      >
        <div
          class="mt-2"
        >
          <div>
            <div
              class="flex items-center mt-6 mb-6"
            >
              <div
                class="flex-1"
              >
                <div
                  class="text-sm font-semibold text-theme-neutral"
                >
                  Wallet
                </div>
                <div
                  class="flex items-center font-semibold"
                >
                  My Wallet
                </div>
              </div>
              <div
                class="sc-AxjAm bLfakz ml-4"
              >
                <div
                  class="sc-AxiKw dzBdqj"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="sc-AxirZ jJscrd border-theme-neutral-300"
              type="horizontal"
            />
          </div>
        </div>
        <div>
          <div
            class="flex items-center mt-6 mb-6"
          >
            <div
              class="flex-1"
            >
              <div
                class="text-sm font-semibold text-theme-neutral"
              >
                Address
              </div>
              <div
                class="flex items-center font-semibold"
              >
                ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
                <span
                  class="ml-4"
                >
                  <div
                    class="inline-block cursor-pointer"
                    data-testid="clipboard__wrapper"
                  >
                    <div
                      class="text-theme-primary-300"
                    >
                      <div
                        class="sc-AxiKw dzBdqj"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          copy.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="flex items-center mb-2 ml-4"
            >
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 izXmpv"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"40\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                    title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-AxirZ jJscrd border-theme-neutral-300"
            type="horizontal"
          />
        </div>
        <div
          class="mt-8"
        >
          <img
            alt="QR Code"
            class="w-64 h-64 mx-auto"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ReceiveFunds should render without a wallet name 1`] = `
<DocumentFragment>
  <div
    class="fixed inset-0 z-50 bg-black opacity-50"
    data-testid="modal__overlay"
  />
  <div
    class="sc-AxhUy fXfatb fixed top-0 left-0 right-0 z-50 flex flex-col px-10 pt-6 pb-8 mx-auto mt-24 overflow-hidden rounded-xl bg-theme-background"
    data-testid="modal__inner"
  >
    <div
      class="absolute top-0 right-0 z-50 mt-5 mr-5"
    >
      <button
        class="sc-AxhCb idLVlI"
        color="neutral"
        data-testid="modal__close-btn"
        type="button"
      >
        <div
          class="p-1"
        >
          <div
            class="sc-AxiKw bopxJn"
            height="12"
            width="12"
          >
            <svg>
              cross-slim.svg
            </svg>
          </div>
        </div>
      </button>
    </div>
    <div
      class="py-4"
    >
      <h2
        class="mb-0 text-3xl font-bold"
      >
        Receive Funds
      </h2>
      <div
        class="flex-1"
      >
        <div
          class="mt-2"
        />
        <div>
          <div
            class="flex items-center mt-6 mb-6"
          >
            <div
              class="flex-1"
            >
              <div
                class="text-sm font-semibold text-theme-neutral"
              >
                Address
              </div>
              <div
                class="flex items-center font-semibold"
              >
                ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
                <span
                  class="ml-4"
                >
                  <div
                    class="inline-block cursor-pointer"
                    data-testid="clipboard__wrapper"
                  >
                    <div
                      class="text-theme-primary-300"
                    >
                      <div
                        class="sc-AxiKw dzBdqj"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          copy.svg
                        </svg>
                      </div>
                    </div>
                  </div>
                </span>
              </div>
            </div>
            <div
              class="flex items-center mb-2 ml-4"
            >
              <div
                class="sc-AxjAm bLfakz -mr-2"
              >
                <div
                  class="sc-AxiKw dzBdqj"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    ark.svg
                  </svg>
                </div>
              </div>
              <div
                class="Avatar__AvatarWrapper-sc-1vsy2s2-0 izXmpv"
                data-testid="Avatar"
              >
                <div
                  class="w-full h-full"
                >
                  <img
                    alt="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                    src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"60\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"10\\" cy=\\"40\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"40\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/></svg>"
                    title="ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="sc-AxirZ jJscrd border-theme-neutral-300"
            type="horizontal"
          />
        </div>
        <div
          class="mt-8"
        >
          <img
            alt="QR Code"
            class="w-64 h-64 mx-auto"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
